<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/text_titulo"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />


    <TextView
        android:id="@+id/textMala"
        android:layout_width="85dp"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/text_n_mala"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

    <TextView
        android:id="@+id/textFardo"
        android:layout_width="257dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_n_fardo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMala" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="299dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFardo">

        <TextView
            android:id="@+id/textMic"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"

            android:text="@string/text_n_Mic"
            app:layout_constraintTop_toBottomOf="@+id/textFardo" />

        <TextView
            android:id="@+id/textRes"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_n_Res"
            app:layout_constraintTop_toBottomOf="@+id/textFardo" />

        <TextView
            android:id="@+id/textUhm"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_n_Uhm"
            app:layout_constraintTop_toBottomOf="@+id/textFardo" />

        <TextView
            android:id="@+id/textSfi"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_n_Sfi"
            app:layout_constraintTop_toBottomOf="@+id/textFardo" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textRegraHvi"
        android:layout_width="257dp"
        android:layout_height="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/text_n_regrahvi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

    <TextView
        android:id="@+id/textBloco"
        android:layout_width="257dp"
        android:layout_height="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/text_n_bloco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegraHvi" />

    <Button
        android:id="@+id/btnLerEtiqueta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ler_etiqueta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>